<resources>
    <string name="app_name">Mevron Driver</string>
    <string name="mevron_logo">mevron logo</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="request_a_ride_at_an_unbeatable_price_safely">Request a ride at an unbeatable price, safely.</string>
    <string name="forget_about_expensive_trips">Forget about overpriced commission.</string>
    <string name="back_button">back button</string>
    <string name="hey_tell_us_your_mobile_number">Hey, tell us your mobile number</string>
    <string name="we_ll_send_a_verification_code_on_this_number">We’ll send a verification code on this number.</string>
    <string name="phone_number">Phone Number</string>
    <string name="next_button">Next Button</string>
    <string name="enter_the_verification_code_sent_to_you">Enter the verification code sent to you</string>
    <string name="we_have_sent_you_a_six_digit_code_on_your">We have sent you a six-digit code on your</string>
    <string name="resend_code">Resend code</string>
    <string name="what_s_your_name">What’s your name?</string>
    <string name="your_name_helps_drivers_to_identify_you">Your name helps drivers to identify you.</string>
    <string name="by_continuing_i_agree_to_the">By continuing, I agree to the</string>
    <string name="terms_of_use_amp_privacy_policy"><![CDATA[terms of use & privacy policy.]]></string>
    <string name="tell_us_your_email">Tell us your email?</string>
    <string name="an_email_address_lets_us_share_trip_recipts">An email address lets us share trip recipts</string>
    <string name="hey_there">Hey there,</string>
    <string name="where_are_you_going">Where are you going?</string>
    <string name="search_your_destination">Search your destination</string>
    <string name="all_saved_places">All Saved Places</string>
    <string name="close_button">Close Button</string>
    <string name="start">Start</string>
    <string name="from">From</string>
    <string name="where_to">Where to?</string>
    <string name="add_stop">add stop</string>
    <string name="add_home">Add Home</string>
    <string name="add_work">Add Work</string>
    <string name="current_location">Current Location</string>
    <string name="set_location_on_the_map">Set location on the map</string>
    <string name="my_rides">My Rides</string>
    <string name="notifications">Notifications</string>
    <string name="payment">Payment</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="set_pickup_location_on_map">Set pickup location on map</string>
    <string name="pick_me_from_here">Pick me from here</string>
    <string name="set_drop_off_location_on_map">Set drop-off location on map</string>
    <string name="drop_me_here">Drop me here</string>
    <string name="choose_your_ride">Choose your ride</string>
    <string name="confirm_economy">Confirm Economy</string>
    <string name="create_an_account">Create an account</string>
    <string name="name">Name</string>
    <string name="email">Email address</string>
    <string name="e_g_abc_email_com">e.g. abc@email.com</string>
    <string name="e_g_john">e.g. John</string>
    <string name="e_g_doe">e.g. Doe</string>
    <string name="city">City</string>
    <string name="referal">Referral Code (Optional)</string>
    <string name="driver_registration">Driver Registration</string>
    <string name="step_1_of_4">Step 1 of 4</string>
    <string name="i_have_a_car">I have a car</string>
    <string name="you_own_or_planning_to_purchase_a_vehicle_or_vehicles_and_will_drive_yourself_but_might_also_employ_others_to_drive_your_vehicle">You own or planning to purchase a vehicle or vehicles and will drive yourself but might also employ others to drive your vehicle</string>
    <string name="i_need_a_car">I need a car</string>
    <string name="i_want_to_be_employed_as_a_driver_by_one_of_mevron_s_partners_and_drive_for_them_on_mevron_s_fleet_partners">I want to be employed as a driver by one of mevron’s partners and drive for them on Mevron\'s Fleet Partners.</string>
    <string name="step_2_of_4">Step 2 of 4</string>
    <string name="add_your_vehicle">Add your vehicle</string>
    <string name="your_vehicle_must_be_2005_or_newer_and_at_least_4_doors_and_not_salvaged">Your vehicle must be 2005 or newer and at least 4 doors and not salvaged.</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="color">Color</string>
    <string name="licence_plate_number">Licence Plate Number</string>
    <string name="continue_text">Continue</string>
    <string name="step_3_of_4">Step 3 of 4</string>
    <string name="make_sure_your_driver_s_licence_is_not_expired_please_click_a_clearer_photo_and_avoid_using_flash">Make sure your Driver’s Licence is not expired. Please click a clearer photo and avoid using flash.</string>
    <string name="submit">Submit</string>
    <string name="re_upload">Re-upload</string>
    <string name="make_sure_your_name_vin_insurance_company_and_expiration_date_are_clear_and_visible">Make sure your name, VIN, insurance company, and expiration date are clear and visible</string>
    <string name="make_sure_your_vehicle_s_make_model_year_license_plate_vin_and_expiration_are_clear_and_visible">Make sure your vehicle’s make, model, year, license plate, VIN and expiration are clear and visible</string>
    <string name="make_sure_you_show_your_full_face_and_sholders_and_take_off_your_sunglasses_or_hat">Make sure you show your full face and sholders and take off your sunglasses or hat.</string>
    <string name="submit_if_readable">Submit this image if you think it’s readable or tap on re-upload button to upload another one.</string>
    <string name="submit_if_lit">Submit this image if you think it’s well-lit, else tap on Re-upload button to upload another one.</string>
    <string name="step_4_of_4">Step 4 of 4</string>
    <string name="social_security_number">Social Security Number</string>
    <string name="we_ll_need_to_pay_you_and_to_run_your_background_check_it_won_t_be_used_for_credit_check">We’ll need to pay you and to run your background check, it won’t be used for credit check.</string>
    <string name="your_application_is_submitted_and_is_under_review">Your application is submitted and is under review.</string>
    <string name="you_will_be_notified_with_application_status_or_check_the_status_by_going_to_settings">You will be notified with application status or check the status by going to Settings.</string>
    <string name="explore_the_app">Explore the app</string>
    <string name="documents">Documents</string>
    <string name="driver_documents">Driver Documents</string>
    <string name="driving_licence">Driving Licence</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="vehicle_registration_sticker">Vehicle Registration sticker</string>
    <string name="vehicle_insurance">Vehicle Insurance</string>
    <string name="accept_ride">Accept Ride</string>
    <string name="tap_here_to_cancel_this_ride_if_rider_don_t_show_up">Tap here to cancel this ride, if rider don’t show up.</string>
    <string name="waiting_for_the_rider">Waiting for the rider</string>
    <string name="ride_in_progress">Ride in Progress</string>
    <string name="ride_details">Ride Details</string>
    <string name="balance">Balance</string>
    <string name="documents_submission_pending">Documents submission pending</string>
    <string name="documents_submission_under_review">We received your submission, check verification status</string>
    <string name="please_complete_all_below_process_to_setup_your_account_and_start_earning">Please complete all below process, to setup your account and start earning</string>
    <string name="we_received_your_submission_check_verification_status">We received your submission, check verification status</string>
    <string name="earning_goal">Earning Goal</string>
    <string name="weekly_goal">Weekly Goal :</string>
    <string name="edit_my_goal">Edit my goal</string>
    <string name="today_s_activity">Today’s Activity</string>
    <string name="earnings">Earnings</string>
    <string name="online">Online</string>
    <string name="rides">Rides</string>
    <string name="no_activity_today">No activity today</string>
    <string name="you_haven_t_done_any_rides_today_go_online_and_start_taking_trips">You haven’t done any rides today, go online and start taking trips</string>
    <string name="see_all_activity">See all activity</string>
    <string name="weekly_summary">Weekly Summary</string>
    <string name="no_activities_this_week">No activities this week</string>
    <string name="you_haven_t_done_any_rides_this_week">You haven’t done any rides this week</string>
    <string name="weekly_challenges">Weekly Challenges</string>
    <string name="your_scheduled_pickups">Your Scheduled Pickups</string>
    <string name="opportunity_for_you">Opportunity for you</string>
    <string name="benefits_for_you">Benefits for you</string>
    <string name="learning_hub">Learning Hub</string>
    <string name="help_and_support">Help and support</string>
    <string name="call_or_chat_with_us_at_anytime_and_get_your_issues_solved_instantly">Call or chat with us at anytime and get your issues solved instantly</string>
    <string name="setup_an_emergency_contact">Setup an emergency contact</string>
    <string name="we_ll_call_them_if_an_issue_is_reported_and_you_don_t_respond">We’ll call them if an issue is reported and you don’t respond.</string>
    <string name="pickup">Pickup</string>
    <string name="java_entry_title" translatable="false">Run the ML Kit quickstart written in Java</string>
    <string name="kotlin_entry_title" translatable="false">Run the ML Kit quickstart written in Kotlin</string>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_camera_rationale" translatable="false">Access to the camera is needed for detection</string>
    <string name="no_camera_permission" translatable="false">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on" translatable="false">Front</string>
    <string name="toggle_turn_off" translatable="false">Back</string>
    <string name="desc_camera_source_activity" translatable="false">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity" translatable="false">Vision detectors demo with a still image</string>
    <string name="desc_camerax_live_preview_activity" translatable="false">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
    <string name="desc_cameraxsource_demo_activity" translatable="false">Object detection with custom classifier using ML Kit CameraXSource API. Note that CameraX is only supported on API 21+</string>
    <string name="download_error" translatable="false">Download error</string>
    <string name="start_over" translatable="false">Start over</string>
    <string name="menu_item_settings" translatable="false">Settings</string>
    <string name="select_image" translatable="false">Select image</string>
    <string name="custom_object_detection" translatable="false">Custom Object Detector</string>
    <string name="pref_screen" translatable="false">ps</string>
    <string name="add_a_vehicle">Add a vehicle</string>
    <string name="my_vehicles">My Vehicles</string>
    <string name="complete_processes_to_start_earning">Please complete all the processes below to setup your account and start earning</string>
    <string name="next">Next</string>
</resources>