<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto">



<androidx.constraintlayout.widget.ConstraintLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SocialSecurityFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".auth.AccountCreationFragment">

            <ImageButton
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:backgroundTint="@android:color/transparent"
                android:id="@+id/back_button"
                android:src="@drawable/ic_back_button"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/back_button"/>

            <TextView
                android:id="@+id/text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/driver_registration"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:textColor="#383838"
                app:layout_constraintBottom_toBottomOf="@id/back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/back_button"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/text11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/step_4_of_4"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:textColor="#2A2A72"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_button"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/text12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/social_security_number"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_15ssp"
                android:gravity="center"
                android:textColor="#383838"
                android:textFontWeight="600"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text11"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/text13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/we_ll_need_to_pay_you_and_to_run_your_background_check_it_won_t_be_used_for_credit_check"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_14sdp"
                android:textColor="#9c9c9c"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text12"
                tools:targetApi="p" />





            <EditText
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                app:layout_constraintTop_toBottomOf="@id/text13"
                android:layout_width="0dp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_height="52dp"
                android:layout_weight="2"
                android:id="@+id/social_number"
                android:hint="e.g. 123-45-6789"
                android:background="@android:color/transparent"
                android:textColor="#383838"
                android:inputType="number"/>




            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                app:backgroundTint="#1F2A2A72"
                android:textColor="#9C9C9C"
                android:textAllCaps="false"
                android:enabled="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cornerRadius="@dimen/_4sdp"
                android:text="@string/continue_text"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginStart="@dimen/_14sdp"
              android:layout_marginBottom="@dimen/_50sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/add_social"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</layout>