<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".sidemenu.VehicleFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">



    <ImageButton
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:backgroundTint="@android:color/transparent"
        android:id="@+id/back_button"
        android:src="@drawable/ic_back_button"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back_button"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/my_vehicles"
        android:fontFamily="@font/poppins_regular"
        android:textSize="@dimen/_14ssp"
        android:gravity="center"
        android:textFontWeight="600"
        android:textColor="#383838"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_14sdp"
        tools:targetApi="p" />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/rider_recycler"
        tools:itemCount="5"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/add_a_vehicle"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/vehicle_item"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintTop_toBottomOf="@id/back_button"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginEnd="@dimen/_14sdp"
        android:textAllCaps="false"
        android:text="@string/add_a_vehicle"
        android:id="@+id/add_a_vehicle"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>