<?xml version="1.0" encoding="utf-8"?>

<layout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".sidemenu.vehicle.ui.DocumentFragment">


<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageButton
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:backgroundTint="@android:color/transparent"
                android:id="@+id/back_button"
                android:src="@drawable/ic_back_button"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/back_button"/>

            <TextView
                android:id="@+id/text1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/driver_registration"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:textColor="#383838"
                app:layout_constraintBottom_toBottomOf="@id/back_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/back_button"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/text11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/step_3_of_4"
                android:visibility="gone"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:textColor="#2A2A72"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/back_button"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/text12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Take a photo of your Driver’s Licence"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_15ssp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:textColor="#383838"
                android:textFontWeight="600"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text11"
                tools:targetApi="p" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:id="@+id/upload_click"
                android:src="@drawable/ic_upload_pix"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text12"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_14sdp"
                android:layout_marginStart="@dimen/_14sdp"/>

            <TextView
                android:id="@+id/text13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/make_sure_your_driver_s_licence_is_not_expired_please_click_a_clearer_photo_and_avoid_using_flash"
                android:textSize="@dimen/_9ssp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_14sdp"
                android:textColor="#9c9c9c"
                android:layout_marginTop="@dimen/_2sdp"
                android:layout_marginStart="@dimen/_14sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upload_click"
                tools:targetApi="p" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/text13"
                android:layout_marginTop="@dimen/_40sdp"
                android:orientation="horizontal"
                android:visibility="invisible"
                android:id="@+id/buttons_layout"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginEnd="@dimen/_14sdp">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="@dimen/_58sdp"
                    android:textAllCaps="false"
                    android:textColor="#8A8A8A"
                    app:backgroundTint="#D9D9D9"
                    android:fontFamily="@font/poppins_regular"
                    app:cornerRadius="@dimen/_4sdp"
                    android:text="@string/re_upload"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:id="@+id/re_upload"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_height="@dimen/_58sdp"
                    app:cornerRadius="@dimen/_4sdp"
                    android:textAllCaps="false"
                    android:text="@string/submit"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:id="@+id/upload"/>

            </LinearLayout>





        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>