<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.AuthSuccessFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_completed_task"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/text12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_application_is_submitted_and_is_under_review"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_15ssp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="#383838"
            android:textFontWeight="600"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            tools:targetApi="p" />

        <TextView
            android:id="@+id/text13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/you_will_be_notified_with_application_status_or_check_the_status_by_going_to_settings"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/_11ssp"
            android:textAlignment="center"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textColor="#9c9c9c"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"

            tools:targetApi="p" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:backgroundTint="#25255A"
        android:textColor="#ffffff"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="@dimen/_4sdp"
        android:text="@string/explore_the_app"
        android:layout_marginEnd="@dimen/_14sdp"
        android:layout_marginStart="@dimen/_14sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/explore_app"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>