<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/white"
        android:tag="documentSubmission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:id="@+id/attention_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_question_circle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/attention_message_title"
            app:tint="@color/field_color" />

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/attention_message_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/field_color"
            app:layout_constraintBottom_toTopOf="@+id/attention_message_sub_title"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/documents_submission_pending" />

        <TextView
            android:layout_marginBottom="16dp"
            android:id="@+id/attention_message_sub_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/grey_3"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/attention_message_title"
            tools:text="@string/complete_processes_to_start_earning" />

        <ImageView
            android:contentDescription="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintStart_toEndOf="@id/attention_message_title" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.87777" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.13333" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
